Changes and error fixes

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
 	<display-name>Invoice</display-name>
+	 <welcome-file-list>  
+   <welcome-file>login.jsp</welcome-file>  
+  </welcome-file-list>  
 	<servlet>
 		<servlet-name>Login</servlet-name>
 		<servlet-class>com.user.LoginServlet</servlet-class>
@@ -152,5 +155,14 @@
 	<servlet-mapping>
 		<servlet-name>DeleteInvoice</servlet-name>
 		<url-pattern>/deleteinvoice</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>EditInvoice</servlet-name>
+		<servlet-class>com.invoice.EditInvoiceServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>EditInvoice</servlet-name>
+		<url-pattern>/editinvoice</url-pattern>
 	</servlet-mapping>
 </web-app>
