--- a/.classpath
+++ b/.classpath
@@ -19,6 +19,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-11-openjdk-amd64"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-9.0.46">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -30,5 +31,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/local/ZOHOCORP/vignesh-pt4524/Downloads/jar_files/tomcat-servlet-api-9.0.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
