--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       </plugin>
     </plugins>
   </build> 
+	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
   <dependencies>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
